Fixed social media buttons on mobile and  changed coin roll to be random

--- a/social.css
+++ b/social.css
@@ -1,14 +1,4 @@
 
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-  transition: all .5s;
-  border: solid 1px #d9e4ea;
-}
 
 .fa-bars {
   border: none;
